--- a/assets/index.css
+++ b/assets/index.css
@@ -3,7 +3,7 @@ body {
   }
   
   .heading {
-    background-color: #131fc7;
+    background-color: #303475;
     margin-bottom: 20px;
     padding: 5px 0px 5px 15px;
   }
